[package]
name = "QNavi"
version = "0.1.0"
edition = "2021"

[dependencies]
# h3 workspace
h3 = { git = "https://github.com/hyperium/h3.git", package = "h3" }
h3-quinn = { git = "https://github.com/hyperium/h3.git", package = "h3-quinn" }

# Quinn family (match h3-quinn expectations)
quinn = "0.11"
quinn-proto = "0.11"

# Core crates
http = "1.3"
bytes = "1"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util"], default-features = false }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }

anyhow = "1"
rcgen = "0.9"

# PEM parsing and pki wrappers
rustls-pemfile = "1.0"
rustls-pki-types = "1.13"

# dotenv for .env support (reads CERT_PATH, KEY_PATH, SECRET_KEY)
dotenvy = "0.15"

# JWT support
jsonwebtoken = "8"
rand = "0.8"

# Serde + uuid + chrono
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

parking_lot = "0.12"
hex = "0.4.3"
base64 = "0.21.7"

# Redis async client (tokio)
redis = { version = "0.32.7", features = ["tokio-comp"] }

[profile.dev]
overflow-checks = true
opt-level = 0